# docs/swagger.json
@@ -725,10 +725,22 @@
         "models.ProfessionalProfileResponse": {
             "type": "object",
             "properties": {
+                "address": {
+                    "type": "string"
+                },
                 "bio": {
                     "type": "string"
                 },
                 "category": {
+                    "type": "string"
+                },
+                "cep": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "email": {
                     "type": "string"
                 },
                 "id": {
@@ -742,6 +754,9 @@
                 },
                 "only_presential": {
                     "type": "boolean"
+                },
+                "phone": {
+                    "type": "string"
                 },
                 "price": {
                     "type": "number"
@@ -761,8 +776,14 @@
                         "type": "string"
                     }
                 },
+                "uf": {
+                    "type": "string"
+                },
                 "user_id": {
                     "type": "integer"
+                },
+                "user_name": {
+                    "type": "string"
                 }
             }
         },
